k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: betteruptime
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: aabhii/betteruptime-frontend:v2-nginx-ingress
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 256Mi

          # Example (if you don’t want to use configmap and just test directly)
          # env:
          #   - name: NEXT_PUBLIC_BACKEND_URL
          #     value: "http://34.60.134.87:3001"
