k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: betteruptime
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:15
        ports:
          - containerPort: 5432
        readinessProbe:
          exec:
            command:
              - pg_isready
              - -U
              - postgres
              - -d
              - mydb
          initialDelaySeconds: 5
          periodSeconds: 5
          failureThreshold: 5
