k8s/pusher-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pusher
  namespace: betteruptime
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pusher
  template:
    metadata:
      labels:
        app: pusher
    spec:
      containers:
        - name: pusher
          image: aabhii/betteruptime-pusher:amd64-latest
